<resources>
    <string name="app_name">MovieApp</string>
    <string name="tab_text_1">Movie List</string>
    <string name="tab_text_2">Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
