<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
   android:layout_height="wrap_content">

    <ImageView android:id="@+id/imageView" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="8dp"
        android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
               android:minHeight="150dp"
               android:minWidth="100dp"
               app:srcCompat="@drawable/no_image" />
    <ImageButton
        android:id="@+id/favButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/ic_heart_unselected"/>
</androidx.constraintlayout.widget.ConstraintLayout>